--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include_Directories(${OpenCV_INCLUDE_DIRS})
 
 find_package(spdlog REQUIRED)
 
+find_package(TBB REQUIRED)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 file(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
@@ -19,6 +20,7 @@ add_library(lib SHARED ${SOURCES})
 target_link_libraries(lib PRIVATE MetavisionSDK::core MetavisionSDK::stream MetavisionSDK::ui)
 target_link_libraries(lib PRIVATE ${OpenCV_LIBRARIES})
 target_link_libraries(lib PRIVATE spdlog::spdlog)
+target_link_libraries(lib PRIVATE TBB::tbb)
 
 target_compile_options(lib PRIVATE -Wall)
 
